certain keyboard shortcuts are not shown #28404

Closed
opened 2011-08-28 19:30:52 +02:00 by Anna Celarek · 5 comments

%%%It's only a small bug, but strange.

For Graph Editor > Drivers mode > Channel menu > Move.. > Up / Down / To Top / To Bottom, no keyboard shortcuts are written next to the command.

Keyboard shortcuts do exist for these commands (Shift PageUp and Shift PageDown, Ctrl Shift PageUp and Ctrl Shift PageDown by default).
They can be found in the Preferences > Input > Animation Channels > Move Channels.

If a shortcut is added in Preferences > Input > Graph Editor > Global > Add New > anim.channels_move, Direction = Down, shortcut for example Alt PageDown, then next to the Graph menu entry the shortcut is written next to all 4 directions (but does not actually work in a list of channels).

I'm attaching a file with two driver channels to try out.

%%%

%%%It's only a small bug, but strange. For Graph Editor > Drivers mode > Channel menu > Move.. > Up / Down / To Top / To Bottom, no keyboard shortcuts are written next to the command. Keyboard shortcuts do exist for these commands (Shift PageUp and Shift PageDown, Ctrl Shift PageUp and Ctrl Shift PageDown by default). They can be found in the Preferences > Input > Animation Channels > Move Channels. If a shortcut is added in Preferences > Input > Graph Editor > Global > Add New > anim.channels_move, Direction = Down, shortcut for example Alt PageDown, then next to the Graph menu entry the shortcut is written next to all 4 directions (but does not actually work in a list of channels). I'm attaching a file with two driver channels to try out. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%ps. it's both in the official 2.59 release for Windows XP (r39307), and a recent svn build on XUbuntu.%%%

%%%ps. it's both in the official 2.59 release for Windows XP (r39307), and a recent svn build on XUbuntu.%%%

%%%Developer note:
This happens because of operator context for "Move..." submenu. This context is WM_OP_INVOKE_REGION_CHANNELS for "Channel" menu but it's getting reset to WM_OP_EXEC_REGION_WIN for "Move.." because of how menu_item_enum_opname_menu from interface_layout.c works.
Tried with uiLayoutSetOperatorContext(layout, lvl->context here) and it worked. Another way is to use sub-class of bpy.types.Menu with operator context set in draw function instead of using operator_enum_menu.

Assigning to our C-side UI code guru for final decision.%%%

%%%Developer note: This happens because of operator context for "Move..." submenu. This context is WM_OP_INVOKE_REGION_CHANNELS for "Channel" menu but it's getting reset to WM_OP_EXEC_REGION_WIN for "Move.." because of how menu_item_enum_opname_menu from interface_layout.c works. Tried with uiLayoutSetOperatorContext(layout, lvl->context here) and it worked. Another way is to use sub-class of bpy.types.Menu with operator context set in draw function instead of using operator_enum_menu. Assigning to our C-side UI code guru for final decision.%%%

%%%Fix committed, had to fix some logic operators since they now got invoked and didn't actually work then, but this was indeed the right thing to change.%%%

%%%Fix committed, had to fix some logic operators since they now got invoked and didn't actually work then, but this was indeed the right thing to change.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#28404
No description provided.