Fix #28404: certain keyboard shortcuts not shown in menus, e.g. move operators in graph editor > channel menu. Problem was these did not inherit operator execution context correctly.

Fix found by Sergey, also needed to fix logic operators which were not working
when invoked instead of executed.